# Cos10gine

./: .gitignore  BoardRayIterator.cpp  BoardRayIterator.h  BoardRays.cpp  BoardRays.h  CMakeLists.txt  ChessGame.cpp  ChessGame.h  MoveGenerator.cpp  MoveGenerator.h  main.cpp
BoardRepresentation/: BitBoard.cpp  BitBoard.h  PieceDefines.h
ChessNotations/: FEN.cpp  FEN.h
Engine/: CMakeLists.txt  MoveGenerator.h
Tests/: CMakeLists.txt  GTest.cpp
engine/: BoardRayIterator.cpp  BoardRayIterator.h  CMakeLists.txt  ChessGame.cpp  ChessGame.h  GrandMaster.cpp  GrandMaster.h  MoveGenerator.cpp  MoveGenerator.h  PrecomputedPiecePatterns.cpp  PrecomputedPiecePatterns.h
engine/BoardRepresentation/: BitBoard.cpp  BitBoard.h  PieceDefines.h  ZobristHash.cpp  ZobristHash.h
engine/Evaluation/: SimpleEvaluation.cpp  SimpleEvaluation.h
engine/Interfaces/: FEN.cpp  FEN.h  UCI.cpp  UCI.h
engine/MoveGeneration/: MagicBitboards.cpp  MagicBitboards.h  MoveGenerator.cpp  MoveGenerator.h  PrecomputedPiecePatterns.cpp  PrecomputedPiecePatterns.h
engine/Search/: AlphaBetaSearch.cpp  AlphaBetaSearch.h
tests/: CMakeLists.txt  PerftTests.cpp  Test.cpp
tests/catch/: catch_amalgamated.cpp  catch_amalgamated.hpp
